--- a/app/workspaces/api/package.json
+++ b/app/workspaces/api/package.json
@@ -42,6 +42,7 @@
 		"class-validator": "^0.14.0",
 		"detain": "^0.1.3",
 		"dotenv": "^16.0.3",
+		"express": "^4.19.2",
 		"fill-range": "^7.0.1",
 		"fp-ts": "^2.13.1",
 		"react": "^18.2.0",
@@ -98,7 +99,6 @@
 		"coverageDirectory": "../coverage",
 		"testEnvironment": "node"
 	},
-	"packageManager": "yarn@3.2.4",
 	"config": {
 		"commitizen": {
 			"path": "./node_modules/cz-conventional-changelog"
