--- a/app/workspaces/api/.env
+++ b/app/workspaces/api/.env
@@ -10,4 +10,4 @@ VITE_API_URL="https://yourapiendpoint.com"
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://10.212.1.4/inventory_db"
+DATABASE_URL="mysql://root:your_root_password@db:3306/your_database_name"
