--- a/app/workspaces/api/package.json
+++ b/app/workspaces/api/package.json
@@ -21,6 +21,7 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@casl/ability": "^6.7.1",
 		"@nestjs/axios": "^2.0.0",
 		"@nestjs/common": "^9.1.6",
 		"@nestjs/config": "^2.2.0",
