--- a/app/workspaces/api/package.json
+++ b/app/workspaces/api/package.json
@@ -26,7 +26,9 @@
 		"@nestjs/common": "^9.1.6",
 		"@nestjs/config": "^2.2.0",
 		"@nestjs/core": "^9.1.6",
+		"@nestjs/jwt": "^10.2.0",
 		"@nestjs/mapped-types": "*",
+		"@nestjs/passport": "^10.0.3",
 		"@nestjs/platform-express": "^9.1.6",
 		"@nestjs/platform-socket.io": "^10.1.0",
 		"@nestjs/swagger": "^6.1.4",
@@ -47,7 +49,10 @@
 		"fill-range": "^7.0.1",
 		"fp-ts": "^2.13.1",
 		"lodash": "^4.17.21",
-		"react": "^18.2.0",
+		"passport": "^0.7.0",
+		"passport-jwt": "^4.0.1",
+		"passport-local": "^1.0.0",
+		"react": "^18.3.1",
 		"react-dom": "^18.2.0",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
@@ -66,6 +71,8 @@
 		"@types/fill-range": "^7.0.0",
 		"@types/jest": "29.2.1",
 		"@types/node": "^18.11.9",
+		"@types/passport-jwt": "^4.0.1",
+		"@types/passport-local": "^1.0.38",
 		"@types/supertest": "^2.0.12",
 		"@typescript-eslint/eslint-plugin": "^5.42.0",
 		"@typescript-eslint/parser": "^5.42.0",
