--- a/app/workspaces/api/package.json
+++ b/app/workspaces/api/package.json
@@ -49,6 +49,7 @@
 		"fill-range": "^7.0.1",
 		"fp-ts": "^2.13.1",
 		"lodash": "^4.17.21",
+		"multer": "1.4.5-lts.1",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
@@ -70,6 +71,7 @@
 		"@types/express": "^4.17.14",
 		"@types/fill-range": "^7.0.0",
 		"@types/jest": "29.2.1",
+		"@types/multer": "^1.4.12",
 		"@types/node": "^18.11.9",
 		"@types/passport-jwt": "^4.0.1",
 		"@types/passport-local": "^1.0.38",
