--- a/app/workspaces/api/package.json
+++ b/app/workspaces/api/package.json
@@ -50,6 +50,7 @@
 		"fp-ts": "^2.13.1",
 		"lodash": "^4.17.21",
 		"multer": "1.4.5-lts.1",
+		"nestjs-pino": "^4.1.0",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
