--- a/app/workspaces/api/package.json
+++ b/app/workspaces/api/package.json
@@ -46,6 +46,7 @@
 		"express": "^4.19.2",
 		"fill-range": "^7.0.1",
 		"fp-ts": "^2.13.1",
+		"jest-extended": "^4.0.2",
 		"lodash": "^4.17.21",
 		"multer": "1.4.5-lts.1",
 		"nestjs-pino": "^4.1.0",
