--- a/app/workspaces/api/package.json
+++ b/app/workspaces/api/package.json
@@ -12,7 +12,9 @@
 		"start": "nest start",
 		"start:dev": "nest start --watch",
 		"start:debug": "nest start --debug --watch",
+		"db_push_and_start": "npm run prisma:generate-push-seed && bun ./prisma/seed.ts && npm run start:prod",
 		"start:prod": "node dist/main.mjs",
+		"prisma:generate-push-seed": "npx prisma generate --schema ./prisma/schema.prisma && npx prisma db push",
 		"lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 		"test": "jest",
 		"test:watch": "jest --watch",
@@ -32,7 +34,6 @@
 		"@nestjs/platform-socket.io": "^10.1.0",
 		"@nestjs/swagger": "^6.1.4",
 		"@nestjs/websockets": "^10.1.0",
-		"@prisma/client": "^5.5.2",
 		"@qbcbyb/nestjs_swagger_plugin": "^4.3.4",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
@@ -50,6 +51,7 @@
 		"lodash": "^4.17.21",
 		"multer": "1.4.5-lts.1",
 		"nestjs-pino": "^4.1.0",
+		"nestjs-prisma": "^0.23.0",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
@@ -65,6 +67,7 @@
 		"@nestjs/cli": "^9.1.5",
 		"@nestjs/schematics": "^9.0.3",
 		"@nestjs/testing": "^9.1.6",
+		"@prisma/client": "^5.19.1",
 		"@swc/core": "^1.3.11",
 		"@types/async": "^3.2.15",
 		"@types/bwip-js": "^3.0.0",
@@ -83,7 +86,7 @@
 		"eslint-plugin-prettier": "^4.2.1",
 		"jest": "29.2.2",
 		"prettier": "^2.7.1",
-		"prisma": "^5.5.2",
+		"prisma": "^5.19.1",
 		"source-map-support": "^0.5.21",
 		"supertest": "^6.3.1",
 		"ts-jest": "29.0.3",
