--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,28 +5,30 @@ RUN apt-get update && apt-get install fish mc vim curl sudo tmux iputils-ping -y
 
 RUN echo 'root:123' | chpasswd
 
-
 RUN mkdir /app
 WORKDIR /app
 
-RUN npm i -g pnpm
+RUN npm i -g pnpm bun
 
 COPY package.json /app
 COPY pnpm-lock.yaml /app
 COPY pnpm-workspace.yaml /app
 
-COPY workspaces/api/package.json /app/workspaces/api/package.json
+COPY workspaces/api/package.json workspaces/api/package.json
 
 RUN pnpm install
-COPY workspaces/api /app/workspaces/api
+COPY workspaces/api workspaces/api
+
+WORKDIR /app/workspaces/api
 RUN pnpm install
 
-RUN cd workspaces/api && pnpm run build
+RUN pnpm run build 
 
-WORKDIR /app/app/workspaces/api
+RUN pnpm dlx prisma generate --schema ./prisma/schema.prisma
+# RUN pnpm dlx prisma db push
 
 ENV PORT=5055
 
 EXPOSE 5055
 
-CMD [ "pnpm","run", "start:prod" ]
+CMD [ "pnpm","run", "db_push_and_start" ]
