--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -13,15 +13,23 @@ services:
       dockerfile: ../Dockerfile.prod
     ports:
       - 90:5055
-    volumes:
-      - ./:/app
     tty: true
     stdin_open: true
     restart: on-failure
     networks:
       - postgres
+    depends_on:
+      db:
+        condition: service_healthy
+        restart: true
 
   db:
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
     container_name: postgres_container
     image: postgres
     environment:
